--- a/server/package.json
+++ b/server/package.json
@@ -16,9 +16,12 @@
   "description": "",
   "devDependencies": {
     "@eslint/js": "^9.24.0",
+    "@types/cors": "^2.8.17",
     "@types/eslint__js": "^8.42.3",
     "@types/express": "^5.0.1",
     "@types/node": "^22.14.1",
+    "@types/pg": "^8.11.13",
+    "drizzle-kit": "^0.31.0",
     "eslint": "^9.24.0",
     "eslint-config-prettier": "^10.1.2",
     "prettier": "^3.5.3",
@@ -27,6 +30,11 @@
     "typescript-eslint": "^8.29.1"
   },
   "dependencies": {
-    "express": "^5.1.0"
+    "better-auth": "^1.2.7",
+    "cors": "^2.8.5",
+    "dotenv": "^16.5.0",
+    "drizzle-orm": "^0.42.0",
+    "express": "^5.1.0",
+    "pg": "^8.15.1"
   }
 }
