--- a/server/package.json
+++ b/server/package.json
@@ -35,6 +35,8 @@
     "dotenv": "^16.5.0",
     "drizzle-orm": "^0.42.0",
     "express": "^5.1.0",
-    "pg": "^8.15.1"
+    "http-errors": "^2.0.0",
+    "pg": "^8.15.1",
+    "zod": "^3.24.4"
   }
 }
