--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,8 @@
     "@hookform/resolvers": "^5.0.1",
     "@mdxeditor/editor": "^3.32.3",
     "@radix-ui/react-label": "^2.1.4",
+    "@radix-ui/react-navigation-menu": "^1.2.12",
+    "@radix-ui/react-popover": "^1.1.13",
     "@radix-ui/react-slot": "^1.2.0",
     "@tailwindcss/vite": "^4.1.4",
     "@tanstack/react-query": "^5.76.1",
