--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "@types/express": "^5.0.1",
     "@types/node": "^22.14.1",
     "@types/pg": "^8.11.13",
+    "@types/slug": "^5.0.9",
     "drizzle-kit": "^0.31.0",
     "eslint": "^9.24.0",
     "eslint-config-prettier": "^10.1.2",
@@ -30,13 +31,16 @@
     "typescript-eslint": "^8.29.1"
   },
   "dependencies": {
+    "@types/morgan": "^1.9.9",
     "better-auth": "^1.2.7",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "drizzle-orm": "^0.42.0",
     "express": "^5.1.0",
     "http-errors": "^2.0.0",
+    "morgan": "^1.10.0",
     "pg": "^8.15.1",
+    "slug": "^10.0.0",
     "zod": "^3.24.4"
   }
 }
