--- a/client/package.json
+++ b/client/package.json
@@ -32,6 +32,7 @@
     "react-hook-form": "^7.56.1",
     "react-markdown": "^10.1.0",
     "react-router": "^7.5.1",
+    "rehype-raw": "^7.0.0",
     "remark-gfm": "^4.0.1",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.2.0",
