--- a/client/package.json
+++ b/client/package.json
@@ -11,7 +11,6 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.0.1",
-    "@mdxeditor/editor": "^3.33.0",
     "@radix-ui/react-alert-dialog": "^1.1.14",
     "@radix-ui/react-checkbox": "^1.3.2",
     "@radix-ui/react-label": "^2.1.4",
@@ -21,6 +20,7 @@
     "@tailwindcss/vite": "^4.1.4",
     "@tanstack/react-query": "^5.76.1",
     "@tanstack/react-query-devtools": "^5.76.1",
+    "@uiw/react-md-editor": "^4.0.7",
     "axios": "^1.9.0",
     "better-auth": "^1.2.7",
     "class-variance-authority": "^0.7.1",
